--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,8 +3,12 @@
   remote_user: root
 
   roles:
-    - ansible-role-template
+    - httpd
 
   tasks:
-    - name: some test to prove the the role works
-      shell: echo "yes"
+    - name: test if port is open
+      wait_for:
+        host: localhost
+        port: 80
+        delay: 5
+        timeout: 30
