--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,23 @@
 ---
 # tasks file for ansible-role-httpd
+- name: include distribution specific variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml"
+    - "{{ ansible_distribution }}.yml"
+    - "default.yml"
+
 - name: install software
   package:
-    name: httpd
+    name: "{{ item }}"
     state: latest
+  with_items:
+    - "{{ packages }}"
 
 - name: start and enable software
   service:
-    name: httpd
+    name: ""{{ item }}""
     state: started
     enabled: yes
+  with_items:
+    - "{{ services }}"
