--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: start and enable software
   service:
-    name: ""{{ item }}""
+    name: "{{ item }}"
     state: started
     enabled: yes
   with_items:
