--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for ansible-role-httpd
+# tasks file for httpd
 - name: include distribution specific variables
   include_vars: "{{ item }}"
   with_first_found:
