Renaming role. Removing "tests", making "with_first_found" role specific

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,9 +3,9 @@
 - name: include distribution specific variables
   include_vars: "{{ item }}"
   with_first_found:
-    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml"
-    - "{{ ansible_distribution }}.yml"
-    - "default.yml"
+    - "httpd.{{ ansible_distribution }}-{{ ansible_distribution_major_version}}.yml"
+    - "httpd.{{ ansible_distribution }}.yml"
+    - "httpd.default.yml"
 
 - name: install software
   package:
