--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,8 @@
     dest: "{{ httpd_directory[ansible_distribution] }}/{{ item.name }}.conf"
   with_items:
     - "{{ httpd_applications }}"
+  notify:
+    - restart software
 
 - name: start and enable software
   service:
