--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,5 +2,11 @@
 # handlers file for httpd
 - name: restart software
   service:
-    name: httpd
+    name: "{{ item }}"
     state: restarted
+  with_items:
+    - "{{ httpd_services[ansible_distribution ~ '-' ~ ansible_distribution_major_version]
+      | default(httpd_services[ansible_distribution]
+      | default(httpd_services['default'] )) }}"
+  when:
+    - ansible_virtualization_type != "docker"
