--- a/molecule/vagrant/molecule.yml
+++ b/molecule/vagrant/molecule.yml
@@ -10,23 +10,23 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: centos-6
+  - name: httpd-centos-6
     box: centos/6
-  - name: centos-7
+  - name: httpd-centos-7
     box: centos/7
-  - name: debian-jessie64
+  - name: httpd-debian-jessie64
     box: debian/jessie64
-  - name: debian-buster64
+  - name: httpd-debian-buster64
     box: desc/buster64
-  - name: fedora-26-cloud-base
+  - name: httpd-fedora-26-cloud-base
     box: fedora/26-cloud-base
-  - name: fedora-27-cloud-base
+  - name: httpd-fedora-27-cloud-base
     box: fedora/27-cloud-base
-  - name: opensuse-openSUSE-42-2-x86-64
+  - name: httpd-opensuse-openSUSE-42-2-x86-64
     box: opensuse/openSUSE-42.2-x86_64
-  - name: ubuntu-trusty
+  - name: httpd-ubuntu-trusty
     box: ubuntu/trusty64
-  - name: ubuntu-zesty
+  - name: httpd-ubuntu-zesty
     box: ubuntu/zesty64
 provisioner:
   name: ansible
