--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -5,6 +5,12 @@
 
   roles:
     - role: robertdebock.bootstrap
+    - role: robertdebock.buildtools
+    - role: robertdebock.epel
+    - role: robertdebock.scl
+    - role: robertdebock.python-pip
+      python_pip_modules:
+        - name: pyopenssl
     - role: ansible-role-httpd
       httpd_applications:
         - name: myapplication
