--- a/molecule/vagrant/playbook.yml
+++ b/molecule/vagrant/playbook.yml
@@ -6,4 +6,10 @@
 
   roles:
     - role: robertdebock.bootstrap
+    - role: robertdebock.buildtools
+    - role: robertdebock.epel
+    - role: robertdebock.scl
+    - role: robertdebock.python-pip
+      python_pip_modules:
+        - name: pyopenssl
     - role: ansible-role-httpd
