--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,12 @@
 ---
 # defaults file for httpd
 
+# The servername to use.
+httpd_servername: "{{ ansible_fqdn }}"
+
+# The non-SSL port to use.
+httpd_port: 80
+
 # To configure https, set the hostname to listen to.
 httpd_ssl_servername: "{{ ansible_fqdn }}"
 
