--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,24 +20,24 @@
 
 - name: create ssl directory
   file:
-    path: "{{ httpd_directory[ansible_distribution] }}/ssl"
+    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl"
     state: directory
 
 - name: create ssl key
   openssl_privatekey:
-    path: "{{ httpd_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.key"
+    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.key"
   register: key
 
 - name: create ssl csr
   openssl_csr:
-    path: "{{ httpd_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.csr"
+    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.csr"
     privatekey_path: "{{ key.filename }}"
     common_name: www.ansible.com
   register: csr
 
 - name: create ssl certificates
   openssl_certificate:
-    path: "{{ httpd_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.crt"
+    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.crt"
     privatekey_path: "{{ csr.privatekey }}"
     csr_path: "{{ csr.filename }}"
     provider: selfsigned
@@ -45,7 +45,7 @@
 - name: configure ssl
   template:
     src: templates/ssl.conf.j2
-    dest: "{{ httpd_directory[ansible_distribution] }}/ssl.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution] }}/ssl.conf"
   notify:
     - restart httpd
   validate: 'apachectl -t -f %s'
@@ -53,13 +53,22 @@
 - name: configure application
   template:
     src: templates/application.conf.j2
-    dest: "{{ httpd_directory[ansible_distribution] }}/{{ item.name }}.conf"
+    dest: "{{ httpd_config_directory[ansible_distribution] }}/{{ item.name }}.conf"
   with_items:
     - "{{ httpd_applications }}"
   notify:
     - restart httpd
+  validate: 'apachectl -t -f %s'
   when:
     - httpd_applications is defined
+
+- name: configure redirect from http to https
+  template:
+    src: templates/default_vhost.conf.j2
+    dest: "{{ httpd_config_directory[ansible_distribution] }}/default_vhost.conf"
+  notify:
+    - restart httpd
+  validate: 'apachectl -t -f %s'
 
 - name: start and enable software
   service:
