Split per distro.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
   - pip install docker-py
 
 script:
-  - molecule test
+  - molecule test --scenario-name "${distribution}"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
