--- a/.travis.yml
+++ b/.travis.yml
@@ -4,32 +4,32 @@ language: python
 services: docker
 
 env:
-  - ansible_version=">=2.4,<2.5" distribution=alpine-3.6
-  - ansible_version=">=2.5,<2.6" distribution=alpine-3.6
-  - ansible_version=">=2.4,<2.5" distribution=alpine-3.7
-  - ansible_version=">=2.5,<2.6" distribution=alpine-3.7
-  - ansible_version=">=2.4,<2.5" distribution=archlinux
-  - ansible_version=">=2.5,<2.6" distribution=archlinux
-  - ansible_version=">=2.4,<2.5" distribution=centos-7
-  - ansible_version=">=2.5,<2.6" distribution=centos-7
-  - ansible_version=">=2.4,<2.5" distribution=debian-buster
-  - ansible_version=">=2.5,<2.6" distribution=debian-buster
-  - ansible_version=">=2.4,<2.5" distribution=debian-stretch
-  - ansible_version=">=2.5,<2.6" distribution=debian-stretch
-  - ansible_version=">=2.4,<2.5" distribution=fedora-26
-  - ansible_version=">=2.5,<2.6" distribution=fedora-26
-  - ansible_version=">=2.4,<2.5" distribution=fedora-27
-  - ansible_version=">=2.5,<2.6" distribution=fedora-27
-  - ansible_version=">=2.4,<2.5" distribution=opensuse-42.2
-  - ansible_version=">=2.5,<2.6" distribution=opensuse-42.2
-  - ansible_version=">=2.4,<2.5" distribution=opensuse-42.3
-  - ansible_version=">=2.5,<2.6" distribution=opensuse-42.3
-  - ansible_version=">=2.4,<2.5" distribution=ubuntu-artful
-  - ansible_version=">=2.5,<2.6" distribution=ubuntu-artful
-  - ansible_version=">=2.4,<2.5" distribution=ubuntu-trusty
-  - ansible_version=">=2.5,<2.6" distribution=ubuntu-trusty
-  - ansible_version=">=2.4,<2.5" distribution=ubuntu-xenial
-  - ansible_version=">=2.5,<2.6" distribution=ubuntu-xenial
+  - version=">=2.4,<2.5" distro=alpine-3.6
+  - version=">=2.5,<2.6" distro=alpine-3.6
+  - version=">=2.4,<2.5" distro=alpine-3.7
+  - version=">=2.5,<2.6" distro=alpine-3.7
+  - version=">=2.4,<2.5" distro=archlinux
+  - version=">=2.5,<2.6" distro=archlinux
+  - version=">=2.4,<2.5" distro=centos-7
+  - version=">=2.5,<2.6" distro=centos-7
+  - version=">=2.4,<2.5" distro=debian-buster
+  - version=">=2.5,<2.6" distro=debian-buster
+  - version=">=2.4,<2.5" distro=debian-stretch
+  - version=">=2.5,<2.6" distro=debian-stretch
+  - version=">=2.4,<2.5" distro=fedora-26
+  - version=">=2.5,<2.6" distro=fedora-26
+  - version=">=2.4,<2.5" distro=fedora-27
+  - version=">=2.5,<2.6" distro=fedora-27
+  - version=">=2.4,<2.5" distro=opensuse-42.2
+  - version=">=2.5,<2.6" distro=opensuse-42.2
+  - version=">=2.4,<2.5" distro=opensuse-42.3
+  - version=">=2.5,<2.6" distro=opensuse-42.3
+  - version=">=2.4,<2.5" distro=ubuntu-artful
+  - version=">=2.5,<2.6" distro=ubuntu-artful
+  - version=">=2.4,<2.5" distro=ubuntu-trusty
+  - version=">=2.5,<2.6" distro=ubuntu-trusty
+  - version=">=2.4,<2.5" distro=ubuntu-xenial
+  - version=">=2.5,<2.6" distro=ubuntu-xenial
 
 
 cache:
@@ -37,12 +37,12 @@ cache:
 
 install:
   - pip install --upgrade pip
-  - pip install ansible"${ansible_version}"
+  - pip install ansible"${version}"
   - pip install molecule
   - pip install docker-py
 
 script:
-  - molecule test --scenario-name "${distribution}"
+  - molecule test --scenario-name "${distro}"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
