--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
   - pip install docker-py
 
 script:
-  - molecule test --scenario-name "${distro}"
+  - molecule --debug test --scenario-name "${distro}"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
