--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,6 @@ env:
   - version=">=2.5,<2.6" distro=centos-7
   - version=">=2.4,<2.5" distro=debian-buster
   - version=">=2.5,<2.6" distro=debian-buster
-  - version=">=2.4,<2.5" distro=debian-jessie
-  - version=">=2.5,<2.6" distro=debian-jessie
-  - version=">=2.4,<2.5" distro=debian-wheezy
-  - version=">=2.5,<2.6" distro=debian-wheezy
   - version=">=2.4,<2.5" distro=debian-stretch
   - version=">=2.5,<2.6" distro=debian-stretch
   - version=">=2.4,<2.5" distro=fedora-26
@@ -45,7 +41,7 @@ install:
   - pip install docker-py
 
 script:
-  - molecule --debug test --scenario-name "${distro}"
+  - molecule test --scenario-name "${distro}"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
