Jessie no, Buster yes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,14 @@ env:
   - version=">=2.4,<2.5" distro="debian-wheezy" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-wheezy" expectation="fail"
   - version=">=2.3,<2.4" distro="debian-jessie" expectation="fail"
-  - version=">=2.4,<2.5" distro="debian-jessie"
-  - version=">=2.5,<2.6" distro="debian-jessie"
+  - version=">=2.4,<2.5" distro="debian-jessie" expectation="fail"
+  - version=">=2.5,<2.6" distro="debian-jessie" expectation="fail"
   - version=">=2.3,<2.4" distro="debian-stretch" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-stretch"
   - version=">=2.5,<2.6" distro="debian-stretch"
   - version=">=2.3,<2.4" distro="debian-buster" expectation="fail"
-  - version=">=2.4,<2.5" distro="debian-buster" expectation="fail"
-  - version=">=2.5,<2.6" distro="debian-buster" expectation="fail"
+  - version=">=2.4,<2.5" distro="debian-buster"
+  - version=">=2.5,<2.6" distro="debian-buster"
   - version=">=2.3,<2.4" distro="fedora-26" expectation="fail"
   - version=">=2.4,<2.5" distro="fedora-26"
   - version=">=2.5,<2.6" distro="fedora-26"
