Add pyopenssl in the tasks, instead of depending on it in playbook.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,10 @@
       | default(httpd_packages[ansible_distribution]
       | default(httpd_packages['default'] )) }}"
 
+- name: install requirements
+  pip:
+    name: pyopenssl
+
 - name: allowing httpd to connect
   seboolean:
     name: httpd_can_network_connect
