Move failing tests to yaml and make "check" run again.

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -52,7 +52,7 @@ scenario:
     - prepare
     - converge
     - idempotence
-#    - check
+    - check
     - side_effect
     - verify
     - destroy
