--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,9 +5,7 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - "{{ httpd_packages[ansible_distribution ~ '-' ~ ansible_distribution_major_version]
-      | default(httpd_packages[ansible_distribution]
-      | default(httpd_packages['default'] )) }}"
+    - "{{ httpd_configuration[ansible_distribution]['packages']"
 
 - name: install requirements
   pip:
@@ -24,24 +22,24 @@
 
 - name: create ssl directory
   file:
-    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl"
+    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl"
     state: directory
 
 - name: create ssl key
   openssl_privatekey:
-    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.key"
+    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.key"
   register: key
 
 - name: create ssl csr
   openssl_csr:
-    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.csr"
+    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.csr"
     privatekey_path: "{{ key.filename }}"
     common_name: "{{ ansible_fqdn }}"
   register: csr
 
 - name: create ssl certificates
   openssl_certificate:
-    path: "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.crt"
+    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.crt"
     privatekey_path: "{{ csr.privatekey }}"
     csr_path: "{{ csr.filename }}"
     provider: selfsigned
@@ -49,7 +47,7 @@
 - name: configure ssl
   template:
     src: templates/ssl.conf.j2
-    dest: "{{ httpd_config_directory[ansible_distribution] }}/ssl.conf"
+    dest: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl.conf"
   notify:
     - restart httpd
   validate: 'apachectl -t -f %s'
@@ -57,7 +55,7 @@
 - name: configure application
   template:
     src: templates/application.conf.j2
-    dest: "{{ httpd_config_directory[ansible_distribution] }}/{{ item.name }}.conf"
+    dest: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/{{ item.name }}.conf"
   with_items:
     - "{{ httpd_applications }}"
   notify:
@@ -69,7 +67,7 @@
 - name: configure redirect from http to https
   template:
     src: templates/default_vhost.conf.j2
-    dest: "{{ httpd_config_directory[ansible_distribution] }}/default_vhost.conf"
+    dest: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/default_vhost.conf"
   notify:
     - restart httpd
   validate: 'apachectl -t -f %s'
@@ -80,8 +78,6 @@
     state: started
     enabled: yes
   with_items:
-    - "{{ httpd_services[ansible_distribution ~ '-' ~ ansible_distribution_major_version]
-      | default(httpd_services[ansible_distribution]
-      | default(httpd_services['default'] )) }}"
+    - "{{ httpd_configuration[ansible_distribution]['service'] }}"
   when:
     - ansible_virtualization_type != "docker"
