--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - "{{ httpd_configuration[ansible_distribution]['packages']"
+    - "{{ httpd_configuration[ansible_distribution]['packages'] }}"
 
 - name: install requirements
   pip:
