--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,24 +22,24 @@
 
 - name: create ssl directory
   file:
-    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl"
+    path: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl"
     state: directory
 
 - name: create ssl key
   openssl_privatekey:
-    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.key"
+    path: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.key"
   register: key
 
 - name: create ssl csr
   openssl_csr:
-    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.csr"
+    path: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.csr"
     privatekey_path: "{{ key.filename }}"
     common_name: "{{ ansible_fqdn }}"
   register: csr
 
 - name: create ssl certificates
   openssl_certificate:
-    path: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.crt"
+    path: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.crt"
     privatekey_path: "{{ csr.privatekey }}"
     csr_path: "{{ csr.filename }}"
     provider: selfsigned
@@ -47,7 +47,7 @@
 - name: configure ssl
   template:
     src: templates/ssl.conf.j2
-    dest: "{{ httpd_configuration[ansible_distribution['config_directory'] }}/ssl.conf"
+    dest: "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl.conf"
   notify:
     - restart httpd
   validate: 'apachectl -t -f %s'
