--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,8 +5,6 @@
     name: "{{ item }}"
     state: restarted
   with_items:
-    - "{{ httpd_services[ansible_distribution ~ '-' ~ ansible_distribution_major_version]
-      | default(httpd_services[ansible_distribution]
-      | default(httpd_services['default'] )) }}"
+    - "{{ httpd_configuration[ansible_distribution]['service'] }}"
   when:
     - ansible_virtualization_type != "docker"
