--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,9 @@ env:
   - version=">=2.3,<2.4" distro="ubuntu-artful" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-artful"
   - version=">=2.5,<2.6" distro="ubuntu-artful" expectation="fail"
+  - version=">=2.3,<2.4" distro="ubuntu-bionic" expectation="fail"
+  - version=">=2.4,<2.5" distro="ubuntu-bionic"
+  - version=">=2.5,<2.6" distro="ubuntu-bionic" expectation="fail"
   - version=">=2.3,<2.4" distro="ubuntu-trusty" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-trusty"
   - version=">=2.5,<2.6" distro="ubuntu-trusty" expectation="fail"
