--- a/molecule/ubuntu-bionic/playbook.yml
+++ b/molecule/ubuntu-bionic/playbook.yml
@@ -2,11 +2,16 @@
 - name: Converge
   hosts: all
   gather_facts: no
-  become: yes
 
   roles:
-    - role: ansible-role-bootstrap
-
-  tasks:
-    - name: test connection
-      ping:
+    - role: robertdebock.bootstrap
+    - role: robertdebock.buildtools
+    - role: robertdebock.python-pip
+    - role: ansible-role-httpd
+      httpd_applications:
+        - name: myapplication
+          location: /myapplication
+          backend_url: http://localhost:8080/myapplication
+        - name: myotherapp
+          location: myotherapp
+          backend_url: http://localhost:8080/myotherapp
