--- a/.travis.yml
+++ b/.travis.yml
@@ -6,49 +6,49 @@ services: docker
 env:
   - version=">=2.3,<2.4" distro="alpine-3.6" expectation="fail"
   - version=">=2.4,<2.5" distro="alpine-3.6"
-  - version=">=2.5,<2.6" distro="alpine-3.6" expectation="fail"
+  - version=">=2.5,<2.6" distro="alpine-3.6"
   - version=">=2.3,<2.4" distro="alpine-3.7" expectation="fail"
   - version=">=2.4,<2.5" distro="alpine-3.7"
-  - version=">=2.5,<2.6" distro="alpine-3.7" expectation="fail"
+  - version=">=2.5,<2.6" distro="alpine-3.7"
   - version=">=2.3,<2.4" distro="archlinux" expectation="fail"
   - version=">=2.4,<2.5" distro="archlinux"
-  - version=">=2.5,<2.6" distro="archlinux" expectation="fail"
+  - version=">=2.5,<2.6" distro="archlinux"
   - version=">=2.3,<2.4" distro="centos-6" expectation="fail"
   - version=">=2.4,<2.5" distro="centos-6" expectation="fail"
   - version=">=2.5,<2.6" distro="centos-6" expectation="fail"
   - version=">=2.3,<2.4" distro="centos-7" expectation="fail"
   - version=">=2.4,<2.5" distro="centos-7"
-  - version=">=2.5,<2.6" distro="centos-7" expectation="fail"
+  - version=">=2.5,<2.6" distro="centos-7"
   - version=">=2.3,<2.4" distro="debian-jessie" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-jessie" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-jessie" expectation="fail"
   - version=">=2.3,<2.4" distro="debian-stretch" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-stretch"
-  - version=">=2.5,<2.6" distro="debian-stretch" expectation="fail"
+  - version=">=2.5,<2.6" distro="debian-stretch"
   - version=">=2.3,<2.4" distro="debian-buster" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-buster"
-  - version=">=2.5,<2.6" distro="debian-buster" expectation="fail"
+  - version=">=2.5,<2.6" distro="debian-buster"
   - version=">=2.3,<2.4" distro="fedora-26" expectation="fail"
   - version=">=2.4,<2.5" distro="fedora-26"
-  - version=">=2.5,<2.6" distro="fedora-26" expectation="fail"
+  - version=">=2.5,<2.6" distro="fedora-26"
   - version=">=2.3,<2.4" distro="fedora-27" expectation="fail"
   - version=">=2.4,<2.5" distro="fedora-27"
-  - version=">=2.5,<2.6" distro="fedora-27" expectation="fail"
+  - version=">=2.5,<2.6" distro="fedora-27"
   - version=">=2.3,<2.4" distro="opensuse-42.2" expectation="fail"
   - version=">=2.4,<2.5" distro="opensuse-42.2"
-  - version=">=2.5,<2.6" distro="opensuse-42.2" expectation="fail"
+  - version=">=2.5,<2.6" distro="opensuse-42.2"
   - version=">=2.3,<2.4" distro="opensuse-42.3" expectation="fail"
   - version=">=2.4,<2.5" distro="opensuse-42.3"
-  - version=">=2.5,<2.6" distro="opensuse-42.3" expectation="fail"
+  - version=">=2.5,<2.6" distro="opensuse-42.3"
   - version=">=2.3,<2.4" distro="ubuntu-artful" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-artful"
-  - version=">=2.5,<2.6" distro="ubuntu-artful" expectation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-artful"
   - version=">=2.3,<2.4" distro="ubuntu-bionic" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-bionic"
-  - version=">=2.5,<2.6" distro="ubuntu-bionic" expectation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-bionic"
   - version=">=2.3,<2.4" distro="ubuntu-xenial" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-xenial"
-  - version=">=2.5,<2.6" distro="ubuntu-xenial" expectation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-xenial"
 
 cache:
   - pip
