Using loop_control label to clean up output.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,6 +61,8 @@
     - restart httpd
   when:
     - httpd_applications is defined
+  loop_control:
+    label: "{{ item.name }}"
 
 - name: configure redirect from http to https
   template:
