--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,9 +30,8 @@ galaxy_info:
         - all
     - name: Ubuntu
       versions:
-        - trusty
-        - xenial
         - artful
+        - bionic
 
   galaxy_tags:
     - webserver
