--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,6 @@
 - robertdebock.bootstrap
 - robertdebock.buildtools
 - robertdebock.epel
+- robertdebock.httpd
 - robertdebock.scl
 - robertdebock.python-pip
