--- a/molecule/alpine-3.7/playbook.yml
+++ b/molecule/alpine-3.7/playbook.yml
@@ -5,6 +5,7 @@
 
   roles:
     - role: robertdebock.bootstrap
+    - role: robertdebock.update
     - role: robertdebock.buildtools
     - role: robertdebock.python-pip
     - role: ansible-role-httpd
