--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,14 +13,16 @@
   with_items:
     - "{{ httpd_requirements }}"
 
-- name: allowing httpd to connect
+- name: modify selinux settings
   seboolean:
-    name: httpd_can_network_connect
+    name: "{{ item }}"
     state: yes
     persistent: yes
   when:
     - ansible_selinux.status is defined
     - ansible_selinux.status == "enabled"
+  with_items:
+    - "{{ httpd_sebooleans }}"
 
 - name: create ssl directory
   file:
