--- a/.travis.yml
+++ b/.travis.yml
@@ -4,45 +4,45 @@ language: python
 services: docker
 
 env:
-  - version=">=2.3,<2.4" distro="alpine-3.6" expectation="fail"
-  - version=">=2.4,<2.5" distro="alpine-3.6"
+  - version=">=2.4,<2.5" distro="alpine-3.6" expectation="fail"
   - version=">=2.5,<2.6" distro="alpine-3.6"
-  - version=">=2.3,<2.4" distro="alpine-3.7" expectation="fail"
-  - version=">=2.4,<2.5" distro="alpine-3.7"
+  - version=">=2.6,<2.7" distro="alpine-3.6"
+  - version=">=2.4,<2.5" distro="alpine-3.7" expectation="fail"
   - version=">=2.5,<2.6" distro="alpine-3.7"
-  - version=">=2.3,<2.4" distro="archlinux" expectation="fail"
-  - version=">=2.4,<2.5" distro="archlinux"
+  - version=">=2.6,<2.7" distro="alpine-3.7"
+  - version=">=2.4,<2.5" distro="archlinux" expectation="fail"
   - version=">=2.5,<2.6" distro="archlinux"
-  - version=">=2.3,<2.4" distro="centos-6" expectation="fail"
+  - version=">=2.6,<2.7" distro="archlinux"
   - version=">=2.4,<2.5" distro="centos-6" expectation="fail"
   - version=">=2.5,<2.6" distro="centos-6" expectation="fail"
-  - version=">=2.3,<2.4" distro="centos-7" expectation="fail"
-  - version=">=2.4,<2.5" distro="centos-7"
+  - version=">=2.6,<2.7" distro="centos-6" expectation="fail"
+  - version=">=2.4,<2.5" distro="centos-7" expectation="fail"
   - version=">=2.5,<2.6" distro="centos-7"
-  - version=">=2.3,<2.4" distro="debian-stretch" expectation="fail"
-  - version=">=2.4,<2.5" distro="debian-stretch"
+  - version=">=2.6,<2.7" distro="centos-7"
+  - version=">=2.4,<2.5" distro="debian-stretch" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-stretch"
-  - version=">=2.3,<2.4" distro="debian-buster" expectation="fail"
-  - version=">=2.4,<2.5" distro="debian-buster"
+  - version=">=2.6,<2.7" distro="debian-stretch"
+  - version=">=2.4,<2.5" distro="debian-buster" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-buster"
-  - version=">=2.3,<2.4" distro="fedora-27" expectation="fail"
-  - version=">=2.4,<2.5" distro="fedora-27"
+  - version=">=2.6,<2.7" distro="debian-buster"
+  - version=">=2.4,<2.5" distro="fedora-27" expectation="fail"
   - version=">=2.5,<2.6" distro="fedora-27"
-  - version=">=2.3,<2.4" distro="fedora-28" expectation="fail"
-  - version=">=2.4,<2.5" distro="fedora-28"
+  - version=">=2.6,<2.7" distro="fedora-27"
+  - version=">=2.4,<2.5" distro="fedora-28" expectation="fail"
   - version=">=2.5,<2.6" distro="fedora-28"
-  - version=">=2.3,<2.4" distro="opensuse-42.2" expectation="fail"
-  - version=">=2.4,<2.5" distro="opensuse-42.2"
+  - version=">=2.6,<2.7" distro="fedora-28"
+  - version=">=2.4,<2.5" distro="opensuse-42.2" expectation="fail"
   - version=">=2.5,<2.6" distro="opensuse-42.2"
-  - version=">=2.3,<2.4" distro="opensuse-42.3" expectation="fail"
-  - version=">=2.4,<2.5" distro="opensuse-42.3"
-  - version=">=2.5,<2.6" distro="opensuse-42.3"
-  - version=">=2.3,<2.4" distro="ubuntu-artful" expectation="fail"
-  - version=">=2.4,<2.5" distro="ubuntu-artful"
+  - version=">=2.6,<2.7" distro="opensuse-42.2"
+  - version=">=2.4,<2.5" distro="opensuse-42.3" expectation="fail"
+  - version=">=2.5,<2.6" distro="opensuse-42.4"
+  - version=">=2.6,<2.7" distro="opensuse-42.4"
+  - version=">=2.4,<2.5" distro="ubuntu-artful" expectation="fail"
   - version=">=2.5,<2.6" distro="ubuntu-artful"
-  - version=">=2.3,<2.4" distro="ubuntu-bionic" expectation="fail"
-  - version=">=2.4,<2.5" distro="ubuntu-bionic"
+  - version=">=2.6,<2.7" distro="ubuntu-artful"
+  - version=">=2.4,<2.5" distro="ubuntu-bionic" expectation="fail"
   - version=">=2.5,<2.6" distro="ubuntu-bionic"
+  - version=">=2.6,<2.7" distro="ubuntu-bionic"
 
 cache:
   - pip
@@ -51,7 +51,7 @@ install:
   - pip install --upgrade pip
   - pip install ansible"${version}"
   - pip install molecule
-  - pip install docker-py
+  - pip install docker
 
 script:
   - if [ "${expectation}" = "fail" ] ; then ! molecule test --scenario-name "${distro}" ; else molecule test --scenario-name "${distro}" ; fi
