--- a/molecule/debian-latest/molecule.yml
+++ b/molecule/debian-latest/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: httpd-centos-7
-    image: centos:7
+  - name: httpd-debian-latest
+    image: debian:latest
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: centos-7
+  name: debian-latest
 verifier:
   name: goss
   lint:
