--- a/molecule/opensuse-leap/molecule.yml
+++ b/molecule/opensuse-leap/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: httpd-fedora-28
-    image: fedora:28
+  - name: httpd-opensuse-leap
+    image: opensuse:leap
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: fedora-28
+  name: opensuse-leap
 verifier:
   name: goss
   lint:
