Tags should be lowercase now.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -40,11 +40,11 @@ galaxy_info:
     - httpd
     - installer
     - package
-    - Alpine
-    - CentOS
-    - Debian
-    - Fedora
-    - RHEL
-    - Ubuntu
+    - alpine
+    - centOS
+    - debian
+    - fedora
+    - rhel
+    - ubuntu
 
 dependencies: []
