Refer to modules with _ instead of -.

--- a/molecule/alpine-edge/playbook.yml
+++ b/molecule/alpine-edge/playbook.yml
@@ -7,7 +7,7 @@
     - role: robertdebock.bootstrap
     - role: robertdebock.update
     - role: robertdebock.buildtools
-    - role: robertdebock.python-pip
+    - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
         - name: myapplication
