--- a/molecule/centos-6/playbook.yml
+++ b/molecule/centos-6/playbook.yml
@@ -8,7 +8,7 @@
     - role: robertdebock.buildtools
     - role: robertdebock.epel
     - role: robertdebock.scl
-    - role: robertdebock.python-pip
+    - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
         - name: myapplication
