--- a/requirements.yml
+++ b/requirements.yml
@@ -3,5 +3,5 @@
 - robertdebock.buildtools
 - robertdebock.epel
 - robertdebock.scl
-- robertdebock.python-pip
+- robertdebock.python_pip
 - robertdebock.update
