--- a/molecule/alpine-latest/playbook.yml
+++ b/molecule/alpine-latest/playbook.yml
@@ -7,7 +7,7 @@
     - role: robertdebock.bootstrap
     - role: robertdebock.update
     - role: robertdebock.buildtools
-    - role: robertdebock.python-pip
+    - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
         - name: myapplication
