--- a/molecule/debian-latest/playbook.yml
+++ b/molecule/debian-latest/playbook.yml
@@ -6,7 +6,7 @@
   roles:
     - role: robertdebock.bootstrap
     - role: robertdebock.buildtools
-    - role: robertdebock.python-pip
+    - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
         - name: myapplication
