--- a/molecule/alpine-latest/playbook.yml
+++ b/molecule/alpine-latest/playbook.yml
@@ -5,6 +5,7 @@
 
   roles:
     - role: robertdebock.bootstrap
+    - role: robertdebock.buildtools
     - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
