--- a/molecule/fedora-rawhide/molecule.yml
+++ b/molecule/fedora-rawhide/molecule.yml
@@ -10,6 +10,8 @@ lint:
 platforms:
   - name: httpd-fedora-rawhide
     image: fedora:rawhide
+    registry:
+      url: registry.fedoraproject.org
 provisioner:
   name: ansible
   lint:
