CentOS 6 may work now.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,15 +14,12 @@ galaxy_info:
     - name: ArchLinux
       version:
         - all
-    - name: CentOS
-      version:
-        - 7
     - name: Debian
       versions:
         - all
     - name: EL
       version:
-        - 7
+        - all
     - name: Fedora
       versions:
         - all
