--- a/molecule/centos-6/playbook.yml
+++ b/molecule/centos-6/playbook.yml
@@ -5,7 +5,7 @@
 
   roles:
     - role: robertdebock.bootstrap
-    - role: robertdebock.epel
+    - role: robertdebock.scl
     - role: robertdebock.python_pip
     - role: ansible-role-httpd
       httpd_applications:
