--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,12 +13,14 @@
 - name: install software
   package:
     name: "{{ item }}"
+    state: present
   with_items:
     - "{{ httpd_packages }}"
 
 - name: install requirements
   pip:
     name: "{{ item }}"
+    state: present
   with_items:
     - "{{ httpd_requirements }}"
 
